packages/cargo_tools_macros/tests/ui/state_value_enum.stderr
error: StateValue can only be derived for tuple structs, not enums
 --> tests/ui/state_value_enum.rs:5:6
  |
5 | enum MyEnum {
  |      ^^^^^^
